[Fixed] #8 La détection de suppression est fonctionnelle et le graphe est MàJ correctement [Bug] #10 Le redraw() du graphe donne aux tâches la couleur de leur "% d'avancement" (ce qui rend ce-dernier "invisible")
+ Les % d'avancements sont forcé de s'arrêter avant la virgule (28% donnait s'affichait comme "28,0000000%" sinon)

[REGRESSION] `marker.symbol = null` **annulé** car il faisait visuellement disparaitre les "%" (l'effet visuel démontrant l'avancement de la tâche). Ceci avait été ajouté pour permettre de MàJ de/vers `milestone` (du coup, ça n'est pas possible sans rafraichir pour le moment)

[SUPPRESSION] ~~&uniquenames=true~~ -> car ceci est automatiquement calculé si le paramètre "&parent" est présent
&label=<col> -> ici, donne un valeur pour "Responsable: <valeur>"
&parent=<col> -> contient l'&id de la Tâche "parent" de celle en cours

+ &edit=true active le drag/drop/resize MAIS ceci ne met pas encore à jour les données côté serveur #13. Pour l'instant on a le modal (affichable via commande) #12 (requête GET par contre)

+ Localisation automatique (`navigator.language` --> correspond à la langue du système, pas forcément celle du système).
Ceci peut être forcé avec le paramètre `&type=[fr, en]`.
+ La localisation applique également le fuseau horaire approprié (détection automatique par le navigateur avec la librairie `momentJS` et `getTimezoneOffset()`
+ `xAxis.tickInterval` "bloque" l'affichage minimum à 24 heures

+ La détection d'une modification de dépendance (quelconque: ajout/suppression/modification) fonctionne correctement (closes #15)

+ Paramètre `&fil=` permet d'appliquer un filtre à la base lors de la requête GET (recherche) (closes #16)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,7 +43,7 @@ html, body {
 }
 div#loading-overlay {
     display: none;
-    z-index: 10;
+    z-index: 2000;
     opacity: 0.95;
     background: #444;
     position: absolute;
@@ -51,8 +51,10 @@ div#loading-overlay {
     left: 0;
     top: 0;
     right: 0;
+    cursor: wait;
 }
-#loading-overlay.active {
+#loading-overlay.active,
+#task-search-widget.active {
     display: block;
 }
 
@@ -71,7 +73,8 @@ div#loading-overlay {
 }
 
 /* Masquer le formulaire servant de template */
-#secret-santa {
+#secret-santa,
+#task-search-widget {
     display: none;
 }
 /* L'afficher lorsqu'il est dans le popup */
@@ -92,6 +95,14 @@ div#loading-overlay {
 .ajs-dialog .ajs-handle {
     display: none !important;
 }
+.alertify .ajs-footer .ajs-buttons .ajs-button.ajs-cancel {
+    color: #c32828;
+}
+.alertify .ajs-footer .ajs-buttons .ajs-button.ajs-ok {
+    color: #28a745;
+    outline: auto 1px;
+}
+
 
 .form-control,
 .input-group-text,
@@ -100,9 +111,19 @@ div#loading-overlay {
 .bootstrap-select .dropdown-menu{
     border-radius: 0 !important;
 }
+input.cursor-pointer {
+    cursor: pointer;
+}
+input[disabled],
+input[readonly] {
+    cursor: not-allowed;
+}
 
 /* Cohérence de style entre Bootstrap 4 et la librairie pour les <select> */
 .bootstrap-select button {
     background: #fff;
     border-color: #dae0e5;
+}
+.dropdown-toggle::after {
+    color: #495057;
 }
